--- a/SbbApi/SbbApi.csproj
+++ b/SbbApi/SbbApi.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.2.3-unstable-003\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="ServiceStack.Common">
       <HintPath>..\packages\ServiceStack.Common.3.9.32\lib\net35\ServiceStack.Common.dll</HintPath>
     </Reference>
@@ -68,6 +71,7 @@
     <Compile Include="LocationResponse.cs" />
     <Compile Include="OfflineTransportService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SbbApiModule.cs" />
     <Compile Include="SerializationExtensions.cs" />
     <Compile Include="StationBoardRequest.cs" />
     <Compile Include="StationBoardResponse.cs" />
