--- a/SbbApi/packages.config
+++ b/SbbApi/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Ninject" version="3.2.3-unstable-003" targetFramework="net45" />
   <package id="ServiceStack.Common" version="3.9.32" targetFramework="net45" />
   <package id="ServiceStack.Text" version="3.9.32" targetFramework="net45" />
 </packages>
