--- a/MySbbInfo/MySbbInfo.csproj
+++ b/MySbbInfo/MySbbInfo.csproj
@@ -91,6 +91,7 @@
     <Compile Include="MainViewModel.cs" />
     <Compile Include="Menu\ChangeUILanguageCommand.cs" />
     <Compile Include="Menu\MenuViewModel.cs" />
+    <Compile Include="MySbbInfoModule.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="SearchStation\ISearchStationViewModel.cs" />
     <Compile Include="SearchStation\SearchStationAsyncCommand.cs" />
