--- a/MySbbInfo/packages.config
+++ b/MySbbInfo/packages.config
@@ -3,7 +3,9 @@
   <package id="BingMapsWpfControl" version="1.0.0" targetFramework="net45" />
   <package id="Caliburn.Micro" version="2.0.1" targetFramework="net45" />
   <package id="Caliburn.Micro.Core" version="2.0.1" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="1.8.0" targetFramework="net45" />
+  <package id="MvvmLightLibs" version="5.0.2.0" targetFramework="net45" />
   <package id="Ninject" version="3.2.3-unstable-003" targetFramework="net45" />
   <package id="WpfLocalizeExtension" version="2.1.2" targetFramework="net45" />
   <package id="XAMLMarkupExtensions" version="1.1.5" targetFramework="net45" />
